--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "open_projects",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "sortablejs": "^1.10.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
